--- a/index.html
+++ b/index.html
@@ -11,58 +11,60 @@
       <div class="welcome">
         <h1>Dear Tasnuva,My Love</h1>
         <h2>let's recall some memory</h2>
-        <button>click here to dive in</button>
+        <!-- <button>click here to dive in</button> -->
+         <a href="memory.html">clik here to dive in</a>
       </div>
     </div>
     <div class="heart">
       <h1>Shona</h1>
-      <!-- <img 
+      <img 
         src="source/2025041421545450.jpg"
         alt=""
         height="110px"
         style="border-radius: 15px"
-      /> -->
+      />
     </div>
     <div class="fall">
       <h1>moyna</h1>
-      <!-- <img
+      <img
         src="source/2025062519420809.jpg "
         height="100"
         style="border-radius: 15px"
         alt=" "
-      /> -->
+      />
     </div>
     <div class="fall2">
       <h1>Pakhi</h1>
-      <!-- <img 
+      <img 
         src="source/retouch_2025062523090634.jpg "
         height="100"
         style="border-radius: 15px"
         alt=" "
-      /> -->
+      />
     </div>
     <div class="slide">
       <h1>O baby</h1>
-      <!-- <img 
+      <img 
         src="source/retouch_2025062523365983.jpg"
         height="100"
         style="border-radius: 15px"
         alt=" "
-      /> -->
+      />
     </div>
     <div class="slide2">
       <h1>jaan</h1>
-      <!-- <img 
+      <img 
         src="source/Snapchat-691298756.jpg"
         width="120"
         style="border-radius: 15px"
         alt=" "
-      /> -->
+      />
     </div>
     <div class="ball">
-      <div class="dntclick">
+      <div  class="dntclick">
         <b>don't click me</b>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
