--- a/memory.html
+++ b/memory.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>memories</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="shortcut icon" href="source/photos.png" type="image/x-icon">
 </head>
 
 <body>
