--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>love you</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="source/love-letter.png" type="image/x-icon">
   </head>
   <body>
     <div class="base">
